# tinypointers

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  battle_test.sh  bench.sh  criterion.toml
benches/: tinypointers_bench.rs
docs/: API_MANUAL.md  ARCHITECTURE.md  BIT_PACKED_PLAN.md  BIT_PACKED_RESEARCH.md  ENHANCEMENTS.md  FUNNEL_CASCADE_PLAN.md  FUNNEL_CASCADE_RESEARCH.md  FUNNEL_HASHING_BREAKTHROUGH.md  MATHEMATICAL_FRAMEWORK.md  README.md  RESEARCH_CONTEXT.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: adversarial_fuzz.rs  insert_fuzz.rs
src/: lib.rs
tests/: adversarial.rs  collision_rate.rs  miri_tests.rs
