[package]
name = "tinypointers"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Spies"]
license = "GPL-3.0-only"
description = "Compact pointer compression for u64 integer keys - Rust implementation of Tiny Pointers (Bender et al., 2021)"
repository = "https://github.com/oldnordic/tinypointers"
readme = "README.md"
keywords = ["hash", "pointer", "compression", "tiny-pointers", "funnel-hashing"]
categories = ["data-structures", "algorithms", "memory-management"]

[dependencies]
ahash = "0.8"
fxhash = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
rand = "0.8"
rand_chacha = "0.3"
nohash-hasher = "0.2"
hashbrown = "0.14"
ahash = "0.8"
fxhash = "0.2"

[[bench]]
name = "tinypointers_bench"
harness = false

[profile.release]
debug = true
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
